<resources>
    <string name="app_name">MvpExample</string>

    <!-- Register Fragment -->
    <string name="text_register_title">Regístratre</string>
    <string name="text_register_email_hint">Email</string>
    <string name="text_register_password_hint">Contraseña</string>
    <string name="text_register_button">Siguiente</string>

    <!-- Sign in Fragment -->
    <string name="text_sign_in_title">Ingresa</string>
    <string name="text_sign_in_email_hint">Email</string>
    <string name="text_sign_in_password_hint">Contraseña</string>
    <string name="text_sign_in_next_button">Entrar</string>
    <string name="text_sign_in_register_button">Registrarme</string>

    <!-- Events List -->
    <string name="text_my_events">Mis Eventos</string>
    <string name="text_other_events">Otros Eventos</string>

    <!-- Create event -->
    <string name="text_create_event_title">Crear Evento</string>
    <string name="text_create_event_name">Nombre:</string>
    <string name="text_create_event_date">Fecha:</string>
    <string name="text_create_event_hour">Hora:</string>
    <string name="text_create_event_place">Lugar:</string>
    <string name="text_create_event_save">Listo</string>

    <!-- Detail event -->
    <string name="text_detail_event_title">Detalle de Evento</string>

    <!-- Detail erolled -->
    <string name="text_erolled_user_title">Participantes</string>

    <string name="menu_logout">LogOut</string>
    <string name="menu_enroll">Inscribirme</string>
    <string name="menu_show_erolled">Ver Participantes</string>
</resources>
